<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/gambar_kucing"
        android:scaleType="centerCrop"
        android:background="#E0E0E0"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnChooseImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_bold"
        android:padding="16dp"
        android:text="@string/pilih_gambar_dari_galeri"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnTakePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ambil_foto_dengan_kamera"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnPostPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/predik"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        android:gravity="center"/>

</LinearLayout>
</ScrollView>