<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/catImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:contentDescription="@string/gambar_kucing_ras_ragdoll"/>
    <TextView
        android:id="@+id/catName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/catname"
        android:textSize="24sp"
        android:textStyle="bold" />
    <TextView
        android:text="@string/accuracy"
        android:id="@+id/a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/accuracyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:lineSpacingExtra="2dp"
        android:text="@string/perawatan_ras"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/careInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:fontFamily="@font/roboto"
        android:lineSpacingExtra="2dp" />

</LinearLayout>
</ScrollView>