<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvDeskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="8dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perawatan_bulu"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/tvPerawatanBulu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perawatan_kuku"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/tvPerawatanKuku"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perawatan_gigi"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/tvPerawatanGigi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aktivitas"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/tvAktivitasStimulasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="8dp" />
        </LinearLayout>



    </ScrollView>

